# emailAgent

./: .env.example  .gitignore  README.md  imap_state.json  pyproject.toml
src/: cli.py  imap_client.py  llm_summarizer.py
